Fix styling on mobile

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -8,8 +8,8 @@
 body
   background-color: #356
   font-family: "Roboto", sans-serif
-  font-size: 14pt
-  line-height: 175%
+  font-size: 11pt
+  line-height: 150%
 
   a
     color: $accent
@@ -27,15 +27,15 @@ body
     margin-top: 1em
     background-color: transparent
     border: none
-    width: 70%
+    width: 95%
     margin-left: auto
     margin-right: auto
 
   .card-header
     color: $accent
-    font-size: 200%
-    letter-spacing: .25em
-    word-spacing: .50em
+    font-size: 120%
+    letter-spacing: .05em
+    word-spacing: .10em
     text-decoration: underline overline
     text-decoration-color: $flood-border
     background-color: $flood
@@ -48,18 +48,22 @@ body
     background-color: $flood-border
     border-color: transparent
     border-radius: 8px
-    padding: 4em
+    padding: 1.5em
     font-weight: 400
     box-shadow: inset 0 0 4px #bbb
 
   nav
+    position: relative
+    z-index: 100
     padding-top: .25em
+    padding-bottom: .25em
     font-weight: 300
-    font-size: 125%
-    height: 2.5em
+    font-size: 95%
+    min-height: 2.5em
     background-color: $accent
     box-shadow: inset 0 0 3px #bbb
     border-radius: 3px
+    margin-bottom: .5em
     a
       color: $flood-border
     a:before
@@ -72,7 +76,7 @@ body
       color: $flood
 
   footer
-    height: 2.5em
+    min-height: 2.5em
     margin-top: 1.5em
     padding: 10px
     background-color: $creamsicle
@@ -81,3 +85,45 @@ body
     color: $icemint
     p
       margin-left: auto
+
+@media (min-width: 768px)
+  body
+    font-size: 13pt
+    line-height: 165%
+
+    .card
+      width: 85%
+
+    .card-header
+      font-size: 175%
+      letter-spacing: .20em
+      word-spacing: .35em
+
+    .card-body
+      padding: 2.5em
+
+    nav
+      font-size: 110%
+
+@media (min-width: 1024px)
+  body
+    font-size: 14pt
+    line-height: 175%
+
+    .card
+      width: 70%
+
+    .card-header
+      font-size: 200%
+      letter-spacing: .25em
+      word-spacing: .50em
+
+    .card-body
+      padding: 4em
+
+    nav
+      font-size: 125%
+      height: 2.5em
+
+    footer
+      height: 2.5em
